exercise + bonus completed - fixed lang issue

--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
     <head>
         <meta charset="utf-8" />
-        <html lang="it"></html>
         <title>Boolean Academy</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Fonts -->
